import renderer from 'react-test-renderer';
import ShallowRenderer from 'react-test-renderer/shallow'
import About from './About';

const OLD_ENV = process.env;

beforeEach(() => {
  jest.resetModules() // Most important - it clears the cache
  process.env = { ...OLD_ENV }; // Make a copy
});

afterAll(() => {
  process.env = OLD_ENV; // Restore old environment
});

test('deep snapshot', () => {
  const component = renderer.create(
    <About />,
  );
  const tree = component.toJSON();
  expect(tree).toMatchSnapshot();
});

test('shallow snapshot', () => {
  const renderer = new ShallowRenderer();
  renderer.render(<About />);
  const result = renderer.getRenderOutput();
  expect(result).toMatchSnapshot()
});
